Prevent mass-assignment.
--HG--
rename : test/functional/wiki_extensions_controller_test.rb => test/functional/wiki_extensions_settings_controller_test.rb

--- a/test/fixtures/wiki_extensions_menus.yml
+++ b/test/fixtures/wiki_extensions_menus.yml
@@ -6,14 +6,18 @@ one:
 
   page_name: MyString
 
-  enabled: 
+  enabled: true
+  menu_no: 1
+  title: hoge
 
 two:
   id: 2
 
   project_id: 1
 
-  page_name: MyString
+  page_name: MyString1
 
-  enabled: 
+  enabled: false 
+  menu_no: 2
+  title: bar
 
